# bayanat-archive

./: .env.example  .gitignore  Caddyfile  Dockerfile  EXPORT_SCHEMA.md  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  commands.py  database.py
app/routes/: documents.py  pages.py  search.py
app/static/assets/: site.webmanifest
app/static/css/: archive.css  print.css
app/static/js/: document-detail-docx.js  document-detail-pdf.js  document-detail-zoom.js  document-detail.js  search-page.js
app/templates/: 404.html  about.html  base.html  components.html  document_detail.html  feedback.html  robots.txt  search.html  sitemap.xml
app/templates/partials/: feedback_error.html  feedback_form.html  feedback_success.html  feedback_widget.html  footer.html  mobile_timeline_range.html  search_documents.html  search_results.html  search_timeline_panel.html
app/templates/partials/document_detail/: details_panel.html
app/templates/partials/media/: loading.html  slot_renderer.html
app/templates/partials/media/renderers/: audio.html  catalog.html  docx.html  image.html  other.html  pdf.html  video.html
